@@ -19,6 +19,7 @@ import org.xbib.elx.http.HttpBulkClientProvider;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -38,15 +39,14 @@ class IndexPruneTest {
 
     @Test
     void testPrune() throws IOException {
-        final HttpAdminClient adminClient = ClientBuilder.builder()
+        try (HttpAdminClient adminClient = ClientBuilder.builder()
                 .setAdminClientProvider(HttpAdminClientProvider.class)
                 .put(helper.getHttpSettings())
                 .build();
-        final HttpBulkClient bulkClient = ClientBuilder.builder()
+             HttpBulkClient bulkClient = ClientBuilder.builder()
                 .setBulkClientProvider(HttpBulkClientProvider.class)
                 .put(helper.getHttpSettings())
-                .build();
-        try {
+                .build()) {
             Settings settings = Settings.builder()
                     .put("index.number_of_shards", 1)
                     .put("index.number_of_replicas", 0)
@@ -55,41 +55,43 @@ class IndexPruneTest {
             IndexDefinition indexDefinition = new DefaultIndexDefinition();
             indexDefinition.setIndex("test");
             indexDefinition.setFullIndexName("test1");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test2", settings);
             indexDefinition.setFullIndexName("test2");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test3", settings);
             indexDefinition.setFullIndexName("test3");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test4", settings);
             indexDefinition.setFullIndexName("test4");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             indexDefinition.setPrune(true);
             IndexRetention indexRetention = new DefaultIndexRetention();
             indexDefinition.setRetention(indexRetention);
+            indexDefinition.setEnabled(true);
             IndexPruneResult indexPruneResult = adminClient.pruneIndex(indexDefinition);
-            logger.info(indexPruneResult.toString());
+            logger.info("prune result = " + indexPruneResult);
             assertTrue(indexPruneResult.getDeletedIndices().contains("test1"));
             assertTrue(indexPruneResult.getDeletedIndices().contains("test2"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test3"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test4"));
             List<Boolean> list = new ArrayList<>();
             for (String index : Arrays.asList("test1", "test2", "test3", "test4")) {
-                list.add(bulkClient.isIndexExists(index));
+                list.add(adminClient.isIndexExists(index));
             }
             logger.info(list);
             assertFalse(list.get(0));
             assertFalse(list.get(1));
             assertTrue(list.get(2));
             assertTrue(list.get(3));
-        } finally {
-            bulkClient.close();
             if (bulkClient.getBulkController().getLastBulkError() != null) {
                 logger.error("error", bulkClient.getBulkController().getLastBulkError());
             }
             assertNull(bulkClient.getBulkController().getLastBulkError());
-            adminClient.close();
         }
     }
 }
