@@ -19,6 +19,7 @@ import org.xbib.elx.node.NodeBulkClientProvider;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -38,13 +39,13 @@ class IndexPruneTest {
 
     @Test
     void testPrune() throws IOException {
-        try (NodeAdminClient adminClient = ClientBuilder.builder(helper.client("1"))
+        try (NodeAdminClient adminClient = ClientBuilder.builder(helper.client())
                 .setAdminClientProvider(NodeAdminClientProvider.class)
-                .put(helper.getNodeSettings("1"))
+                .put(helper.getNodeSettings())
                 .build();
-             NodeBulkClient bulkClient = ClientBuilder.builder(helper.client("1"))
+             NodeBulkClient bulkClient = ClientBuilder.builder(helper.client())
                 .setBulkClientProvider(NodeBulkClientProvider.class)
-                .put(helper.getNodeSettings("1"))
+                .put(helper.getNodeSettings())
                 .build()) {
             Settings settings = Settings.builder()
                     .put("index.number_of_shards", 1)
@@ -54,27 +55,33 @@ class IndexPruneTest {
             IndexDefinition indexDefinition = new DefaultIndexDefinition();
             indexDefinition.setIndex("test_prune");
             indexDefinition.setFullIndexName("test_prune1");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune2", settings);
             indexDefinition.setFullIndexName("test_prune2");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune3", settings);
             indexDefinition.setFullIndexName("test_prune3");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune4", settings);
             indexDefinition.setFullIndexName("test_prune4");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             indexDefinition.setPrune(true);
             IndexRetention indexRetention = new DefaultIndexRetention();
             indexDefinition.setRetention(indexRetention);
+            indexDefinition.setEnabled(true);
             IndexPruneResult indexPruneResult = adminClient.pruneIndex(indexDefinition);
+            logger.info("prune result = " + indexPruneResult);
             assertTrue(indexPruneResult.getDeletedIndices().contains("test_prune1"));
             assertTrue(indexPruneResult.getDeletedIndices().contains("test_prune2"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test_prune3"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test_prune4"));
             List<Boolean> list = new ArrayList<>();
             for (String index : Arrays.asList("test_prune1", "test_prune2", "test_prune3", "test_prune4")) {
-                list.add(bulkClient.isIndexExists(index));
+                list.add(adminClient.isIndexExists(index));
             }
             logger.info(list);
             assertFalse(list.get(0));
