@@ -19,6 +19,7 @@ import org.xbib.elx.transport.TransportBulkClientProvider;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -38,15 +39,14 @@ class IndexPruneTest {
 
     @Test
     void testPrune() throws IOException {
-        final TransportAdminClient adminClient = ClientBuilder.builder()
+        try (TransportAdminClient adminClient = ClientBuilder.builder()
                 .setAdminClientProvider(TransportAdminClientProvider.class)
                 .put(helper.getTransportSettings())
                 .build();
-        final TransportBulkClient bulkClient = ClientBuilder.builder()
+             TransportBulkClient bulkClient = ClientBuilder.builder()
                 .setBulkClientProvider(TransportBulkClientProvider.class)
                 .put(helper.getTransportSettings())
-                .build();
-        try {
+                .build()) {
             Settings settings = Settings.builder()
                     .put("index.number_of_shards", 1)
                     .put("index.number_of_replicas", 0)
@@ -55,36 +55,39 @@ class IndexPruneTest {
             indexDefinition.setIndex("test_prune");
             indexDefinition.setFullIndexName("test_prune1");
             bulkClient.newIndex("test_prune1", settings);
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune2", settings);
             indexDefinition.setFullIndexName("test_prune2");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune3", settings);
             indexDefinition.setFullIndexName("test_prune3");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             bulkClient.newIndex("test_prune4", settings);
             indexDefinition.setFullIndexName("test_prune4");
-            adminClient.shiftIndex(indexDefinition, List.of());
+            indexDefinition.setShift(true);
+            adminClient.shiftIndex(indexDefinition, Collections.emptyList());
             indexDefinition.setPrune(true);
             IndexRetention indexRetention = new DefaultIndexRetention();
             indexDefinition.setRetention(indexRetention);
+            indexDefinition.setEnabled(true);
             IndexPruneResult indexPruneResult = adminClient.pruneIndex(indexDefinition);
+            logger.info("prune result = " + indexPruneResult);
             assertTrue(indexPruneResult.getDeletedIndices().contains("test_prune1"));
             assertTrue(indexPruneResult.getDeletedIndices().contains("test_prune2"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test_prune3"));
             assertFalse(indexPruneResult.getDeletedIndices().contains("test_prune4"));
             List<Boolean> list = new ArrayList<>();
             for (String index : Arrays.asList("test_prune1", "test_prune2", "test_prune3", "test_prune4")) {
-                list.add(bulkClient.isIndexExists(index));
+                list.add(adminClient.isIndexExists(index));
             }
             logger.info(list);
             assertFalse(list.get(0));
             assertFalse(list.get(1));
             assertTrue(list.get(2));
             assertTrue(list.get(3));
-        } finally {
-            adminClient.close();
-            bulkClient.close();
             if (bulkClient.getBulkController().getLastBulkError() != null) {
                 logger.error("error", bulkClient.getBulkController().getLastBulkError());
             }
